--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@ethersproject/experimental": "^5.6.3",
     "@intercroneswap/java-tron-provider": "^0.0.12",
     "@intercroneswap/tronlink-provider": "^0.0.4",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "@mui/styles": "^5.8.4",
     "@reach/dialog": "0.16.0",
     "@reduxjs/toolkit": "^1.8.2",
+    "@types/react-spinner": "^0.2.0",
     "@types/rebass": "4.0.5",
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-react/core": "^6.1.9",
@@ -28,20 +31,25 @@
     "multicodec": "^3.2.1",
     "multihashes": "^4.0.3",
     "node-vibrant": "^3.2.1-alpha.1",
+    "notistack": "^3.0.1",
     "polished": "^4.2.2",
     "qs": "^6.9.4",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-confetti": "^6.0.0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-device-detect": "^1.6.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.8",
     "react-ga": "^3.3.0",
+    "react-notifications": "^1.7.4",
+    "react-notifications-component": "^4.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
+    "react-spinner": "^0.2.7",
     "react-spring": "8.0.27",
     "react-use-gesture": "9.1.3",
     "react-window": "^1.8.5",
@@ -49,6 +57,7 @@
     "redux-localstorage-simple": "^2.5.1",
     "sass": "^1.52.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "5.3.1",
     "tronweb": "^4.2.0",
     "typescript": "^4.4.2",
@@ -93,6 +102,7 @@
     "@types/node": "^16.7.13",
     "@types/qs": "^6.9.2",
     "@types/react": "^17.0.2",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.3.3",
